--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -61,6 +61,11 @@ const reservasPendientes = await prisma.reserva.count({
               </a>
             </li>
             <li>
+              <a href="/admin/agenda" class="block rounded-2xl border border-[#200934]/15 px-4 py-3 transition hover:border-[#200934]/30 hover:bg-[#f7f4ff]">
+                Asignar dias y horarios de trabajo
+              </a>
+            </li>
+            <li>
               <a href="/admin/contenido" class="block rounded-2xl border border-[#200934]/15 px-4 py-3 transition hover:border-[#200934]/30 hover:bg-[#f7f4ff]">
                 Actualizar informacion publica
               </a>
